--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,9 +12,10 @@
     "@bundly/ares-core": "0.2.0",
     "@bundly/ares-react": "^0.2.0",
     "@dfinity/agent": "^1.4.0",
-    "@mantine/core": "7.16.1",
+    "@mantine/core": "^7.16.1",
     "@mantine/dates": "^7.16.2",
-    "@mantine/hooks": "7.16.1",
+    "@mantine/form": "^7.16.2",
+    "@mantine/hooks": "^7.16.1",
     "@mantine/notifications": "^7.16.2",
     "@tabler/icons-react": "^3.28.1",
     "clsx": "^2.1.1",
@@ -22,7 +23,8 @@
     "mantine-react-table": "^2.0.0-beta.8",
     "next": "14.2.4",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-hook-form": "^7.54.2"
   },
   "devDependencies": {
     "@types/node": "^20.14.9",
