--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "@mantine/core": "7.16.1",
     "@mantine/dates": "^7.16.2",
     "@mantine/hooks": "7.16.1",
+    "@mantine/modals": "^7.16.2",
     "@mantine/notifications": "^7.16.2",
     "@tabler/icons-react": "^3.28.1",
     "clsx": "^2.1.1",
